<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="0dp"
    android:background="@drawable/rounded"
    tools:ignore="MissingConstraints">

    <!-- ImageView for the calendar icon -->
    <ImageView
        android:id="@+id/mic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/mic" />

    <!-- LinearLayout with vertical orientation -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >

        <!-- TextView for the label name -->
        <TextView
            android:id="@+id/labelName7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:text="@string/announcement"
            />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/set_announcement_description"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:textSize="16sp"
            />

    </LinearLayout>


</RelativeLayout>
</layout>
