<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="70dp"
    android:layout_gravity="top"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="0dp"
    android:background="@drawable/rounded"
    tools:ignore="MissingConstraints">

    <!-- ImageView for the calendar icon -->
    <ImageView
        android:id="@+id/attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/attachment" />

    <!-- LinearLayout with vertical orientation -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="55dp"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <!-- TextView for the label name -->
        <TextView
            android:id="@+id/labelName6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_attachment"
            android:textStyle="bold"

            />

    </LinearLayout>

    <!-- ImageView for the arrow icon -->
    <ImageView
        android:id="@+id/arrowIcon6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/arrow"
        android:src="@drawable/arrow" />

</RelativeLayout>
</layout>
